--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
             </header>
             <main>
                 <h2>Blog</h2>
+                    <section class="wide">
+                        
+                    </section>
+                    <aside class="thin">
 
+                    </aside>
             </main>
+
         </div>
     </body>
 </html>
