--- a/index.html
+++ b/index.html
@@ -10,8 +10,147 @@
     <body>
         <div class="container">
             <header>
+                <nav class="raleway uppercase clearfix">
+                    <h2 class="bold">HackerYou</h2>
+                    <ul class="bold">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Bootcamp</a></li>
+                        <li><a href="#">Part-time</a></li>
+                    </ul>
+                </nav>
+                <section class="raleway">
+                    <article>
+                        <h1 class="uppercase">HackerYou Tech Test</h1>
+                        <h4 class="notoserif italic light">twenty-nineteen</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                            Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper </p>
+                    </article>
+                </section>
+            </header>
+            <main>
+                <h2>Blog</h2>
+                    <section class="wide">
+                        <article>
+                            <img>
+                            <div>
+                                <h3>
+                                    HACKERYOU TECH TEST
+                                </h3>
+                                <h4>
+                                    March 1st, 2018
+                                </h4>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    Ut wisi enim ad minim veniam, quis nostrud
+                                </p>
+                                <a>Read More</a>
+                            </div>
+                        </article>
+                        <article>
+                            <img>
+                            <div>
+                                <h3>
+                                    HACKERYOU TECH TEST
+                                </h3>
+                                <h4>
+                                    March 1st, 2018
+                                </h4>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    Ut wisi enim ad minim veniam, quis nostrud
+                                </p>
+                                <a>Read More</a>
+                            </div>
+                        </article>
+                        <article>
+                            <img>
+                            <div>
+                                <h3>
+                                    HACKERYOU TECH TEST
+                                </h3>
+                                <h4>
+                                    March 1st, 2018
+                                </h4>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    Ut wisi enim ad minim veniam, quis nostrud
+                                </p>
+                                <a>Read More</a>
+                            </div>
+                        </article>
+                    </section>
+                    <aside class="thin">
+                        <img>
+                        <div>
+                            <h2>About Us</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
+                                ex ea comomdo consequat. Duis autem vel eum iriure dolor in henderit in vulpate velit esse molestie consequat, vel ilum dolore eq 
+                                feugiat nulla</p>
+                        </div>
+                    </aside>
+                    <section>
+                        <h2>Related Posts</h2>
+                        <article>
+                            <img>
+                            <div>
+                                <h3>
+                                    HACKERYOU TECH TEST
+                                </h3>
+                                <h4>
+                                    March 1st, 2018
+                                </h4>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    Ut wisi enim ad minim veniam, quis nostrud
+                                </p>
+                                <a>Read More</a>
+                            </div>
+                        </article>
+                        <article>
+                            <img>
+                            <div>
+                                <h3>
+                                    HACKERYOU TECH TEST
+                                </h3>
+                                <h4>
+                                    March 1st, 2018
+                                </h4>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    Ut wisi enim ad minim veniam, quis nostrud
+                                </p>
+                                <a>Read More</a>
+                            </div>
+                        </article>
+                        <article>
+                            <img>
+                            <div>
+                                <h3>
+                                    HACKERYOU TECH TEST
+                                </h3>
+                                <h4>
+                                    March 1st, 2018
+                                </h4>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    Ut wisi enim ad minim veniam, quis nostrud
+                                </p>
+                                <a>Read More</a>
+                            </div>
+                        </article>
+                    </section>                   
+            </main>
+            <footer>
+                <div>
+                    <h3>HackerYou Tech Test</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
+                        ex ea comomdo consequat.</p>
+                </div>
                 <nav>
-                    <h1>HackerYou</h1>
                     <ul>
                         <li>Home</li>
                         <li>About</li>
@@ -20,23 +159,15 @@
                         <li>Part-Time</li>
                     </ul>
                 </nav>
-                <section>
-                    <article>
-                        <h1>Hacker You Tech Test</h1>
-                        <h4>twenty-nineteen</h4>
-                        <p>Lorem ipsum</p>
-                    </article>
-                </section>
-            </header>
-            <main>
-                <h2>Blog</h2>
-                    <section class="wide">
-                        
-                    </section>
-                    <aside class="thin">
-
-                    </aside>
-            </main>
+                <form>
+                    <h3>Subscribe to our newsletter</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        Ut wisi enim ad minim
+                    </p>
+                    <input type="email" name="email" placeholder="email address">
+                    <button type="submit">Subscribe</button>
+                </form>
+            </footer>
 
         </div>
     </body>
