--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <header>
                 <nav class="raleway uppercase clearfix">
-                    <h2 class="bold">HackerYou</h2>
+                    <h2 class="bold"><a class="nodecor black" href="#">HackerYou</a></h2>
                     <ul class="bold">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
@@ -22,21 +22,21 @@
                 </nav>
                 <section class="raleway">
                     <article>
-                        <h1 class="uppercase">HackerYou Tech Test</h1>
-                        <h4 class="notoserif italic light">twenty-nineteen</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        <h1 class="uppercase center">HackerYou Tech Test</h1>
+                        <h4 class="notoserif italic light center">twenty-nineteen</h4>
+                        <p class="center bold"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                             Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper </p>
                     </article>
                 </section>
             </header>
             <main>
-                <h2>Blog</h2>
+                <h2 class="center uppercase">Blog</h2>
                     <section class="wide">
                         <article>
                             <img>
                             <div>
                                 <h3>
-                                    HACKERYOU TECH TEST
+
                                 </h3>
                                 <h4>
                                     March 1st, 2018
@@ -52,7 +52,7 @@
                             <img>
                             <div>
                                 <h3>
-                                    HACKERYOU TECH TEST
+                                    HackerYou Tech Test
                                 </h3>
                                 <h4>
                                     March 1st, 2018
@@ -68,7 +68,7 @@
                             <img>
                             <div>
                                 <h3>
-                                    HACKERYOU TECH TEST
+                                    HackerYou Tech Test
                                 </h3>
                                 <h4>
                                     March 1st, 2018
@@ -87,7 +87,7 @@
                             <h2>About Us</h2>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                                 Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
-                                ex ea comomdo consequat. Duis autem vel eum iriure dolor in henderit in vulpate velit esse molestie consequat, vel ilum dolore eq 
+                                ex ea comomdo consequat. Duis autem vel eum iriure dolor in henderit in vulpate velit esse molestie consequat, vel ilum dolore eq
                                 feugiat nulla</p>
                         </div>
                     </aside>
@@ -141,7 +141,7 @@
                                 <a>Read More</a>
                             </div>
                         </article>
-                    </section>                   
+                    </section>
             </main>
             <footer>
                 <div>
