--- a/index.html
+++ b/index.html
@@ -30,122 +30,124 @@
                 </section>
             </header>
             <main>
-                <h2 class="center uppercase">Blog</h2>
-                    <section class="wide">
-                        <article>
-                            <img>
+                <h3 class="center uppercase">Blog</h3>
+                    <div class="subcontainer clearfix">
+                        <section class="wide">
+                            <article class="gridItemA">
+                                <img class="fitdiv" src="assets/image-2.jpg">
+                                <div>
+                                    <h4>
+                                        HackerYou Tech Test
+                                    </h4>
+                                    <h5>
+                                        March 1st, 2018
+                                    </h5>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                        Ut wisi enim ad minim veniam, quis nostrud
+                                    </p>
+                                    <a>Read More</a>
+                                </div>
+                            </article>
+                            <article class="gridItemB">
+                                <img class="fitdiv" src="assets/image-3.jpg">
+                                <div>
+                                    <h4>
+                                        HackerYou Tech Test
+                                    </h4>
+                                    <h5>
+                                        March 1st, 2018
+                                    </h5>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                        Ut wisi enim ad minim veniam, quis nostrud
+                                    </p>
+                                    <a>Read More</a>
+                                </div>
+                            </article>
+                            <article class="gridItemC">
+                                <img class="fitdiv" src="assets/image-5.jpg">
+                                <div>
+                                    <h4>
+                                        HackerYou Tech Test
+                                    </h4>
+                                    <h5>
+                                        March 1st, 2018
+                                    </h5>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                        Ut wisi enim ad minim veniam, quis nostrud
+                                    </p>
+                                    <a>Read More</a>
+                                </div>
+                            </article>
+                        </section>
+                        <aside class="thin">
+                            <img class="fitdiv" src="assets/image-4.jpg">
                             <div>
-                                <h3>
-
-                                </h3>
-                                <h4>
-                                    March 1st, 2018
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                    Ut wisi enim ad minim veniam, quis nostrud
-                                </p>
-                                <a>Read More</a>
+                                <h3>About Us</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
+                                    ex ea comomdo consequat. Duis autem vel eum iriure dolor in henderit in vulpate velit esse molestie consequat, vel ilum dolore eq
+                                    feugiat nulla</p>
                             </div>
-                        </article>
-                        <article>
-                            <img>
-                            <div>
-                                <h3>
-                                    HackerYou Tech Test
-                                </h3>
-                                <h4>
-                                    March 1st, 2018
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                    Ut wisi enim ad minim veniam, quis nostrud
-                                </p>
-                                <a>Read More</a>
-                            </div>
-                        </article>
-                        <article>
-                            <img>
-                            <div>
-                                <h3>
-                                    HackerYou Tech Test
-                                </h3>
-                                <h4>
-                                    March 1st, 2018
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                    Ut wisi enim ad minim veniam, quis nostrud
-                                </p>
-                                <a>Read More</a>
-                            </div>
-                        </article>
-                    </section>
-                    <aside class="thin">
-                        <img>
-                        <div>
-                            <h2>About Us</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
-                                ex ea comomdo consequat. Duis autem vel eum iriure dolor in henderit in vulpate velit esse molestie consequat, vel ilum dolore eq
-                                feugiat nulla</p>
-                        </div>
-                    </aside>
-                    <section>
-                        <h2>Related Posts</h2>
-                        <article>
-                            <img>
-                            <div>
-                                <h3>
-                                    HACKERYOU TECH TEST
-                                </h3>
-                                <h4>
-                                    March 1st, 2018
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                    Ut wisi enim ad minim veniam, quis nostrud
-                                </p>
-                                <a>Read More</a>
-                            </div>
-                        </article>
-                        <article>
-                            <img>
-                            <div>
-                                <h3>
-                                    HACKERYOU TECH TEST
-                                </h3>
-                                <h4>
-                                    March 1st, 2018
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                    Ut wisi enim ad minim veniam, quis nostrud
-                                </p>
-                                <a>Read More</a>
-                            </div>
-                        </article>
-                        <article>
-                            <img>
-                            <div>
-                                <h3>
-                                    HACKERYOU TECH TEST
-                                </h3>
-                                <h4>
-                                    March 1st, 2018
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                    Ut wisi enim ad minim veniam, quis nostrud
-                                </p>
-                                <a>Read More</a>
-                            </div>
-                        </article>
-                    </section>
+                        </aside>
+                    </div>
+                        <section>
+                            <h3>Related Posts</h3>
+                            <article>
+                                <img src="assets/image-6.jpg">
+                                <div>
+                                    <h4>
+                                        HACKERYOU TECH TEST
+                                    </h4>
+                                    <h5>
+                                        March 1st, 2018
+                                    </h5>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                        Ut wisi enim ad minim veniam, quis nostrud
+                                    </p>
+                                    <a>Read More</a>
+                                </div>
+                            </article>
+                            <article>
+                                <img>
+                                <div>
+                                    <h4>
+                                        HACKERYOU TECH TEST
+                                    </h4>
+                                    <h5>
+                                        March 1st, 2018
+                                    </h5>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                        Ut wisi enim ad minim veniam, quis nostrud
+                                    </p>
+                                    <a>Read More</a>
+                                </div>
+                            </article>
+                            <article>
+                                <img>
+                                <div>
+                                    <h4>
+                                        HACKERYOU TECH TEST
+                                    </h4>
+                                    <h5>
+                                        March 1st, 2018
+                                    </h5>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                        Ut wisi enim ad minim veniam, quis nostrud
+                                    </p>
+                                    <a>Read More</a>
+                                </div>
+                            </article>
+                        </section>                    
             </main>
             <footer>
                 <div>
-                    <h3>HackerYou Tech Test</h3>
+                    <h4>HackerYou Tech Test</h4>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                         Ut wisi enim ad minim veniam, quis nostrud exerci tation ullacorper suscipit lobortis nist ut aliquip
                         ex ea comomdo consequat.</p>
@@ -160,7 +162,7 @@
                     </ul>
                 </nav>
                 <form>
-                    <h3>Subscribe to our newsletter</h3>
+                    <h4>Subscribe to our newsletter</h4>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonum my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                         Ut wisi enim ad minim
                     </p>
